2009-08-21	Denis M. Gabaidulin

	* main/Utils/ArrayUtils.class.php: mergeSortedLists() added.
	Classic algorithm implementation for two sorted list merge.

2009-08-29	Konstantin V. Arkhipov

	* core/DB/MySQL.class.php: respect port setting.

2009-08-20	Denis M. Gabaidulin

	* main/Crypto/Crypter.class.php: simple mcrypt ext. wrapper added.

2009-08-11	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveForm.class.php: ofAutoProto() method added
	to use with generated proto classes. 

2009-08-07	Sergey S. Sergeev

	* main/Base/Hstore.class.php, meta/types/HstoreType.class.php,
	core/DB/PgSQL.class.php, core/Form/Primitives/PrimitiveHstore.class.php,
	core/OSQL/DataType.class.php, main/Base/LightMetaProperty.class.php,
	test/core/PrimitiveHstoreTest.class.php, test/misc/DAOTest.class.php:
	hstore PostgreSql specific dropped.

2009-07-31	Ivan Y. Khvostishkov

	* main/Net/Mail/MailAddress.class.php: mail address encoding
	implementation according to RFC822 / RFC2047.

	* main/EntityProto/Builders/DirectoryBuilder.class.php: fine-grained
	tuning on file permissions.

	* core/Form/Filters/Utf16ConverterFilter.class.php: very-special filter
	for broken unicode implementations on some platforms.

2009-07-22	Konstantin V. Arkhipov

	* core/Types/Range.class.php: splitted into IntegerRange and
	NumericRange.

2009-07-20	Denis M. Gabaidulin

	* core/Cache/MemcachedLocker.class.php added.

2009-07-16	Denis M. Gabaidulin

	* main/Utils/WebMoneyUtils.class.php added.

2009-07-02	Denis M. Gabaidulin

	* main/Base/Comparator.class.php interface added.
	Main/Base/ImmutableObjectComparator.class.php,
	main/Base/SerializedObjectComparator.class.php: classes to compare
	object in different context added.

2009-07-01	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveHstore.class.php,
	test/core/PrimitiveHstoreTest.class.php, test/misc/DAOTest.class.php,
	core/DB/PgSQL.class.php: reimplemented PrimitiveHstore.

2009-06-29	Sergey S. Sergeev
